--- a/InitConfig.json
+++ b/InitConfig.json
@@ -7,5 +7,8 @@
 	"ossUrl":"http://52.76.109.246:23000/games/",
 	"ossUrlZip":"http://52.76.109.246:23000/games/",
 	"ForceUpdateUrl":"http://52.76.109.246/",
-	"shareLink":"http://52.76.109.246:25000"
+	"shareLink":"http://52.76.109.246:25000",
+	"followAccountWA":"https://whatsapp.com/channel/0029ValZAXFBqbrCwuC7kr2u",
+	"followAccountTG":"https://t.me/Arkdominovip",
+	"followAccountFB":"https://www.facebook.com/profile.php?id=61559062977645"
 }
