--- a/InitConfig.json
+++ b/InitConfig.json
@@ -19,5 +19,6 @@
 	},
 	"followAccountWA":"https://whatsapp.com/channel/0029ValZAXFBqbrCwuC7kr2u",
 	"followAccountTG":"https://t.me/Arkdominovip",
-	"followAccountFB":"https://www.facebook.com/profile.php?id=61559062977645"
+	"followAccountFB":"https://www.facebook.com/profile.php?id=61559062977645",
+	"viptg":"https://t.me/+Fp_7yBTOZtlkMGZl"
 }
